Fix on_field label for various fields
On_field label was not visible for certain fields because these fields
don't use regular html input elements but div elements (the SmartField
uses a div element in touch mode).

Fixed for MultilineSmartField, DropDownField, FileChooserField,
LabelField

Also removed obsolete smart field loading css rules and made sure
animation is also
executed for drop down fields.

230697

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/filechooserfield/FileChooserField.less
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/filechooserfield/FileChooserField.less
@@ -18,15 +18,21 @@
   }
 
   & > .file-input {
-
     & > input {
       display: none;
     }
 
     & > .file-input-text {
       overflow-x: hidden;
-    }
 
+      &[placeholder]:empty::before {
+        #scout.fake-placeholder();
+      }
+
+      &[placeholder].disabled:empty::before {
+        #scout.placeholder-disabled();
+      }
+    }
   }
 
   & > .legacy-upload-form {
@@ -35,5 +41,4 @@
       height: 100%;
     }
   }
-
 }
